Add supplementary material and multiple cycles with issues.

--- a/_posts/2011-12-21-abernethy11a.md
+++ b/_posts/2011-12-21-abernethy11a.md
@@ -14,7 +14,8 @@ tex_title: Does an Efficient Calibrated Forecasting Strategy Exist?
 firstpage: 809
 lastpage: 812
 page: 809-812
-sections: 
+order: 809
+cycles: false
 author:
 - given: Jacob
   family: Abernethy
