--- a/_posts/2011-12-21-abernethy11b.md
+++ b/_posts/2011-12-21-abernethy11b.md
@@ -17,7 +17,8 @@ tex_title: Blackwell Approachability and No-Regret Learning are Equivalent
 firstpage: 27
 lastpage: 46
 page: 27-46
-sections: 
+order: 27
+cycles: false
 author:
 - given: Jacob
   family: Abernethy
