--- a/_posts/2011-12-21-acharya11a.md
+++ b/_posts/2011-12-21-acharya11a.md
@@ -15,7 +15,8 @@ tex_title: Competitive Closeness Testing
 firstpage: 47
 lastpage: 68
 page: 47-68
-sections: 
+order: 47
+cycles: false
 author:
 - given: Jayadev
   family: Acharya
