--- a/_posts/2011-12-21-agarwal11a.md
+++ b/_posts/2011-12-21-agarwal11a.md
@@ -19,7 +19,8 @@ tex_title: Oracle inequalities for computationally budgeted model selection
 firstpage: 69
 lastpage: 86
 page: 69-86
-sections: 
+order: 69
+cycles: false
 author:
 - given: Alekh
   family: Agarwal
