--- a/_posts/2011-12-21-amin11a.md
+++ b/_posts/2011-12-21-amin11a.md
@@ -21,7 +21,8 @@ tex_title: Bandits, Query Learning, and the Haystack Dimension
 firstpage: 87
 lastpage: 106
 page: 87-106
-sections: 
+order: 87
+cycles: false
 author:
 - given: Kareem
   family: Amin
