--- a/_posts/2011-12-21-audibert11a.md
+++ b/_posts/2011-12-21-audibert11a.md
@@ -23,7 +23,8 @@ tex_title: Minimax Policies for Combinatorial Prediction Games
 firstpage: 107
 lastpage: 132
 page: 107-132
-sections: 
+order: 107
+cycles: false
 author:
 - given: Jean-Yves
   family: Audibert
