--- a/_posts/2011-12-21-bartok11a.md
+++ b/_posts/2011-12-21-bartok11a.md
@@ -20,7 +20,8 @@ tex_title: Minimax Regret of Finite Partial-Monitoring Games in Stochastic Envir
 firstpage: 133
 lastpage: 154
 page: 133-154
-sections: 
+order: 133
+cycles: false
 author:
 - given: Gábor
   family: Bartók
