--- a/_posts/2011-12-21-chaudhuri11a.md
+++ b/_posts/2011-12-21-chaudhuri11a.md
@@ -33,7 +33,8 @@ tex_title: Sample Complexity Bounds for Differentially Private Learning
 firstpage: 155
 lastpage: 186
 page: 155-186
-sections: 
+order: 155
+cycles: false
 author:
 - given: Kamalika
   family: Chaudhuri
