--- a/_posts/2011-12-21-comminges11a.md
+++ b/_posts/2011-12-21-comminges11a.md
@@ -21,7 +21,8 @@ tex_title: Tight conditions for consistent variable selection in high dimensiona
 firstpage: 187
 lastpage: 206
 page: 187-206
-sections: 
+order: 187
+cycles: false
 author:
 - given: Laëtitia
   family: Comminges
