--- a/_posts/2011-12-21-daniely11a.md
+++ b/_posts/2011-12-21-daniely11a.md
@@ -25,7 +25,8 @@ tex_title: Multiclass Learnability and the ERM principle
 firstpage: 207
 lastpage: 232
 page: 207-232
-sections: 
+order: 207
+cycles: false
 author:
 - given: Amit
   family: Daniely
