--- a/_posts/2011-12-21-feldman11a.md
+++ b/_posts/2011-12-21-feldman11a.md
@@ -43,7 +43,8 @@ tex_title: Lower Bounds and Hardness Amplification for Learning Shallow Monotone
 firstpage: 273
 lastpage: 292
 page: 273-292
-sections: 
+order: 273
+cycles: false
 author:
 - given: Vitaly
   family: Feldman
