--- a/_posts/2011-12-21-feldman11b.md
+++ b/_posts/2011-12-21-feldman11b.md
@@ -28,7 +28,8 @@ tex_title: Distribution-Independent Evolvability of Linear Threshold Functions
 firstpage: 253
 lastpage: 272
 page: 253-272
-sections: 
+order: 253
+cycles: false
 author:
 - given: Vitaly
   family: Feldman
