--- a/_posts/2011-12-21-foster11a.md
+++ b/_posts/2011-12-21-foster11a.md
@@ -16,7 +16,8 @@ tex_title: Complexity-Based Approach to Calibration with Checking Rules
 firstpage: 293
 lastpage: 314
 page: 293-314
-sections: 
+order: 293
+cycles: false
 author:
 - given: Dean P.
   family: Foster
