--- a/_posts/2011-12-21-foygel11a.md
+++ b/_posts/2011-12-21-foygel11a.md
@@ -16,7 +16,8 @@ tex_title: Concentration-Based Guarantees  for Low-Rank Matrix Reconstruction
 firstpage: 315
 lastpage: 340
 page: 315-340
-sections: 
+order: 315
+cycles: false
 author:
 - given: Rina
   family: Foygel
