--- a/_posts/2011-12-21-gao11a.md
+++ b/_posts/2011-12-21-gao11a.md
@@ -25,7 +25,8 @@ tex_title: On the Consistency of Multi-Label Learning
 firstpage: 341
 lastpage: 358
 page: 341-358
-sections: 
+order: 341
+cycles: false
 author:
 - given: Wei
   family: Gao
