--- a/_posts/2011-12-21-garivier11a.md
+++ b/_posts/2011-12-21-garivier11a.md
@@ -23,7 +23,8 @@ tex_title: The KL-UCB Algorithm for Bounded Stochastic Bandits and Beyond
 firstpage: 359
 lastpage: 376
 page: 359-376
-sections: 
+order: 359
+cycles: false
 author:
 - given: Aurélien
   family: Garivier
