--- a/_posts/2011-12-21-grunwald11a.md
+++ b/_posts/2011-12-21-grunwald11a.md
@@ -20,7 +20,8 @@ tex_title: 'Safe Learning:    bridging the gap between Bayes, MDL and statistica
 firstpage: 397
 lastpage: 420
 page: 397-420
-sections: 
+order: 397
+cycles: false
 author:
 - given: Peter
   family: Grünwald
