--- a/_posts/2011-12-21-grunwald11b.md
+++ b/_posts/2011-12-21-grunwald11b.md
@@ -17,7 +17,8 @@ tex_title: Bounds on Individual Risk for Log-loss Predictors
 firstpage: 813
 lastpage: 816
 page: 813-816
-sections: 
+order: 813
+cycles: false
 author:
 - given: Peter D.
   family: Grünwald
