--- a/_posts/2011-12-21-hazan11a.md
+++ b/_posts/2011-12-21-hazan11a.md
@@ -23,7 +23,8 @@ tex_title: 'Beyond the regret minimization barrier: an optimal algorithm for sto
 firstpage: 421
 lastpage: 436
 page: 421-436
-sections: 
+order: 421
+cycles: false
 author:
 - given: Elad
   family: Hazan
