--- a/_posts/2011-12-21-hazan11b.md
+++ b/_posts/2011-12-21-hazan11b.md
@@ -13,7 +13,8 @@ tex_title: A simple multi-armed bandit algorithm with optimal variation-bounded 
 firstpage: 817
 lastpage: 820
 page: 817-820
-sections: 
+order: 817
+cycles: false
 author:
 - given: Elad
   family: Hazan
