--- a/_posts/2011-12-21-kallweit11a.md
+++ b/_posts/2011-12-21-kallweit11a.md
@@ -16,7 +16,8 @@ tex_title: A Close Look to Margin Complexity and Related Parameters
 firstpage: 437
 lastpage: 456
 page: 437-456
-sections: 
+order: 437
+cycles: false
 author:
 - given: Michael
   family: Kallweit
