--- a/_posts/2011-12-21-kotlowski11a.md
+++ b/_posts/2011-12-21-kotlowski11a.md
@@ -23,7 +23,8 @@ tex_title: Maximum Likelihood vs. Sequential Normalized Maximum Likelihood  in O
 firstpage: 457
 lastpage: 476
 page: 457-476
-sections: 
+order: 457
+cycles: false
 author:
 - given: Wojciech
   family: Kotłowski
