--- a/_posts/2011-12-21-kotlowski11b.md
+++ b/_posts/2011-12-21-kotlowski11b.md
@@ -13,7 +13,8 @@ tex_title: Minimax Algorithm for Learning Rotations
 firstpage: 821
 lastpage: 824
 page: 821-824
-sections: 
+order: 821
+cycles: false
 author:
 - given: Wojciech
   family: Kotłowski
