--- a/_posts/2011-12-21-li11a.md
+++ b/_posts/2011-12-21-li11a.md
@@ -26,7 +26,8 @@ tex_title: A New Algorithm for Compressed Counting with Applications in Shannon 
 firstpage: 477
 lastpage: 496
 page: 477-496
-sections: 
+order: 477
+cycles: false
 author:
 - given: Ping
   family: Li
