--- a/_posts/2011-12-21-mannor11a.md
+++ b/_posts/2011-12-21-mannor11a.md
@@ -17,7 +17,8 @@ tex_title: Robust approachability and regret minimization in games with partial 
 firstpage: 515
 lastpage: 536
 page: 515-536
-sections: 
+order: 515
+cycles: false
 author:
 - given: Shie
   family: Mannor
