--- a/_posts/2011-12-21-michael11a.md
+++ b/_posts/2011-12-21-michael11a.md
@@ -13,7 +13,8 @@ tex_title: Missing Information Impediments to Learnability
 firstpage: 825
 lastpage: 828
 page: 825-828
-sections: 
+order: 825
+cycles: false
 author:
 - given: Loizos
   family: Michael
