--- a/_posts/2011-12-21-mukherjee11a.md
+++ b/_posts/2011-12-21-mukherjee11a.md
@@ -24,7 +24,8 @@ tex_title: The Rate of Convergence of Adaboost
 firstpage: 537
 lastpage: 558
 page: 537-558
-sections: 
+order: 537
+cycles: false
 author:
 - given: Indraneel
   family: Mukherjee
