--- a/_posts/2011-12-21-rakhlin11a.md
+++ b/_posts/2011-12-21-rakhlin11a.md
@@ -20,7 +20,8 @@ tex_title: 'Online Learning: Beyond Regret'
 firstpage: 559
 lastpage: 594
 page: 559-594
-sections: 
+order: 559
+cycles: false
 author:
 - given: Alexander
   family: Rakhlin
