--- a/_posts/2011-12-21-rigollet11a.md
+++ b/_posts/2011-12-21-rigollet11a.md
@@ -21,7 +21,8 @@ tex_title: Neyman-Pearson classification under a strict constraint
 firstpage: 595
 lastpage: 614
 page: 595-614
-sections: 
+order: 595
+cycles: false
 author:
 - given: Philippe
   family: Rigollet
