--- a/_posts/2011-12-21-rudin11a.md
+++ b/_posts/2011-12-21-rudin11a.md
@@ -21,7 +21,8 @@ tex_title: Sequential Event Prediction with Association Rules
 firstpage: 615
 lastpage: 634
 page: 615-634
-sections: 
+order: 615
+cycles: false
 author:
 - given: Cynthia
   family: Rudin
