--- a/_posts/2011-12-21-salmon11a.md
+++ b/_posts/2011-12-21-salmon11a.md
@@ -20,7 +20,8 @@ tex_title: Optimal aggregation of affine estimators
 firstpage: 635
 lastpage: 660
 page: 635-660
-sections: 
+order: 635
+cycles: false
 author:
 - given: Joseph
   family: Salmon
