--- a/_posts/2011-12-21-shamir11a.md
+++ b/_posts/2011-12-21-shamir11a.md
@@ -20,7 +20,8 @@ tex_title: 'Collaborative Filtering with the Trace Norm: Learning, Bounding, and
 firstpage: 661
 lastpage: 678
 page: 661-678
-sections: 
+order: 661
+cycles: false
 author:
 - given: Ohad
   family: Shamir
