--- a/_posts/2011-12-21-slivkins11b.md
+++ b/_posts/2011-12-21-slivkins11b.md
@@ -15,7 +15,8 @@ tex_title: Monotone multi-armed bandit allocations
 firstpage: 829
 lastpage: 834
 page: 829-834
-sections: 
+order: 829
+cycles: false
 author:
 - given: Aleksandrs
   family: Slivkins
