--- a/_posts/2011-12-21-steinwart11a.md
+++ b/_posts/2011-12-21-steinwart11a.md
@@ -17,7 +17,8 @@ tex_title: Adaptive Density Level Set Clustering
 firstpage: 703
 lastpage: 738
 page: 703-738
-sections: 
+order: 703
+cycles: false
 author:
 - given: Ingo
   family: Steinwart
