--- a/_posts/2011-12-21-szita11a.md
+++ b/_posts/2011-12-21-szita11a.md
@@ -21,7 +21,8 @@ tex_title: Agnostic KWIK learning and efficient approximate reinforcement learni
 firstpage: 739
 lastpage: 772
 page: 739-772
-sections: 
+order: 739
+cycles: false
 author:
 - given: István
   family: Szita
