--- a/_posts/2011-12-21-yang11a.md
+++ b/_posts/2011-12-21-yang11a.md
@@ -24,7 +24,8 @@ tex_title: Identifiability of Priors from Bounded Sample Sizes  with Application
 firstpage: 789
 lastpage: 806
 page: 789-806
-sections: 
+order: 789
+cycles: false
 author:
 - given: Liu
   family: Yang
