--- a/_posts/2011-12-21-maillard11a.md
+++ b/_posts/2011-12-21-maillard11a.md
@@ -17,7 +17,8 @@ tex_title: A Finite-Time Analysis of Multi-armed Bandits Problems with Kullback-
 firstpage: 497
 lastpage: 514
 page: 497-514
-sections: 
+order: 497
+cycles: false
 author:
 - given: Odalric-Ambrym
   family: Maillard
