--- a/_posts/2011-12-21-slivkins11a.md
+++ b/_posts/2011-12-21-slivkins11a.md
@@ -32,7 +32,8 @@ tex_title: Contextual Bandits with Similarity Information
 firstpage: 679
 lastpage: 702
 page: 679-702
-sections: 
+order: 679
+cycles: false
 author:
 - given: Aleksandrs
   family: Slivkins
