--- a/_posts/2011-12-21-vanerven11a.md
+++ b/_posts/2011-12-21-vanerven11a.md
@@ -20,7 +20,8 @@ tex_title: Mixability is Bayes Risk Curvature Relative to Log Loss
 firstpage: 233
 lastpage: 252
 page: 233-252
-sections: 
+order: 233
+cycles: false
 author:
 - given: Tim
   family: Erven
