Fix prefix on Ule's name

--- a/_posts/2011-12-21-kakade11a.md
+++ b/_posts/2011-12-21-kakade11a.md
@@ -18,7 +18,8 @@ author:
 - given: Sham M.
   family: Kakade
 - given: Ulrike
-  family: von Luxburg
+  prefix: von
+  family: Luxburg
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
