Fix the first two files

--- a/_posts/2011-12-21-abernethy11a.md
+++ b/_posts/2011-12-21-abernethy11a.md
@@ -1,6 +1,6 @@
 ---
 title: Does an Efficient Calibrated Forecasting Strategy Exist?
-abstract: 'We recall two previously-proposed notions of \emphasymptotic calibration
+abstract: 'We recall two previously-proposed notions of asymptotic calibration
   for a forecaster making a sequence of probability predictions. We note that the
   existence of efficient algorithms for calibrated forecasting holds only in the case
   of binary outcomes. We pose the question: do there exist such efficient algorithms
