Replace \cite with plain text Insert space correctly between sentences or words Use math format

--- a/_posts/2011-12-21-abernethy11b.md
+++ b/_posts/2011-12-21-abernethy11b.md
@@ -7,7 +7,7 @@ abstract: 'We consider the celebrated Blackwell Approachability Theorem for two-
   is equivalent to, in a very strong sense, the problem of regret minimization for
   Online Linear Optimization. We show that any algorithm for one such problem can
   be efficiently converted into an algorithm for the other. We provide one novel application
-  of this reduction: the first \emphefficient algorithm for calibrated forecasting.'
+  of this reduction: the first efficient algorithm for calibrated forecasting.'
 pdf: http://proceedings.mlr.press/v19/abernethy11b/abernethy11b.pdf
 layout: inproceedings
 series: Proceedings of Machine Learning Research
