--- a/_posts/2011-12-21-comminges11a.md
+++ b/_posts/2011-12-21-comminges11a.md
@@ -2,7 +2,7 @@
 title: Tight conditions for consistent variable selection in high dimensional nonparametric
   regression
 abstract: We address the issue of variable selection in the regression model with
-  very high ambient dimension, \textiti.e., when the number of covariates is very
+  very high ambient dimension, i.e., when the number of covariates is very
   large. The main focus is on the situation where the number of relevant covariates,
   called intrinsic dimension, is much smaller than the ambient dimension. Without
   assuming any parametric form of the underlying regression function, we get tight
