--- a/_posts/2011-12-21-grunwald11a.md
+++ b/_posts/2011-12-21-grunwald11a.md
@@ -3,13 +3,12 @@ title: 'Safe Learning:    bridging the gap between Bayes, MDL and statistical le
   theory via  empirical convexity'
 abstract: We extend Bayesian MAP and Minimum Description Length (MDL) learning by
   testing whether the data can be substantially more compressed by a mixture of the
-  MDL/MAP distribution with another element of themodel, and adjusting the learning
-  rate if this is the case. While standard Bayes and MDL can fail to converge ifthe
-  model is wrong, the resulting “safe” estimator continues toachieve good rates with
-  wrong models. Moreover, when applied toclassification and regression models as considered
-  in statisticallearning theory, the approach achieves optimal rates under, e.g.,Tsybakov’s
-  conditions, and reveals new situations in which we canpenalize by (- \log \text\sc
-  prior)/n rather than \sqrt(- \log \text\sc prior)/n.
+  MDL/MAP distribution with another element of the model, and adjusting the learning
+  rate if this is the case. While standard Bayes and MDL can fail to converge if the
+  model is wrong, the resulting “safe” estimator continues to achieve good rates with
+  wrong models. Moreover, when applied to classification and regression models as considered
+  in statistical learning theory, the approach achieves optimal rates under, e.g.,Tsybakov’s
+  conditions, and reveals new situations in which we can penalize by $(- \log \mathrm{PRIOR})/n$ rather than $\sqrt{(- \log \mathrm{PRIOR})/n}$.
 pdf: http://proceedings.mlr.press/v19/grunwald11a/grunwald11a.pdf
 layout: inproceedings
 series: Proceedings of Machine Learning Research
