--- a/_posts/2011-12-21-hazan11b.md
+++ b/_posts/2011-12-21-hazan11b.md
@@ -2,7 +2,7 @@
 title: A simple multi-armed bandit algorithm with optimal variation-bounded regret
 abstract: We pose the question of whether it is possible to design a simple, linear-time
   algorithm for the basic multi-armed bandit problem in the adversarial setting which
-  has a regret bound of O(\sqrtQ \log T), where Q is the total quadratic variation
+  has a regret bound of $O(\sqrt{Q \log T})$, where $Q$ is the total quadratic variation
   of all the arms.
 pdf: http://proceedings.mlr.press/v19/hazan11b/hazan11b.pdf
 layout: inproceedings
