--- a/_posts/2011-12-21-rakhlin11a.md
+++ b/_posts/2011-12-21-rakhlin11a.md
@@ -1,14 +1,14 @@
 ---
 title: 'Online Learning: Beyond Regret'
 abstract: 'We study online learnability of a wide class of problems, extending the
-  results of \citeRakSriTew10 to general notions of performance measure well beyond
+  results of Rakhlin et al. (2010a) to general notions of performance measure well beyond
   external regret. Our framework simultaneously captures such well-known notions as
-  internal and general Φ-regret, learning with non-additive global cost functions,
+  internal and general $\Phi$-regret, learning with non-additive global cost functions,
   Blackwell’s approachability, calibration of forecasters, and more. We show that
   learnability in all these situations is due to control of the same three quantities:
   a martingale convergence term, a term describing the ability to perform well if
   future is known, and  a generalization of sequential Rademacher complexity, studied
-  in \citeRakSriTew10. Since we directly study complexity of the problem instead of
+  in Rakhlin et al. (2010a). Since we directly study complexity of the problem instead of
   focusing on efficient algorithms, we are able to improve and extend many known results
   which have been previously derived via an algorithmic construction.'
 pdf: http://proceedings.mlr.press/v19/rakhlin11a/rakhlin11a.pdf
