--- a/_posts/2011-12-21-slivkins11b.md
+++ b/_posts/2011-12-21-slivkins11b.md
@@ -1,11 +1,10 @@
 ---
 title: Monotone multi-armed bandit allocations
 abstract: We present a novel angle for multi-armed bandits (henceforth abbreviated
-  MAB) which follows from the recent work on \emphMAB mechanisms \citepMechMAB-ec09,DevanurK08,Transform-ec10.
+  MAB) which follows from the recent work on MAB mechanisms (Babaioff et al., 2009; Devanur and Kakade, 2009; Babaioff et al., 2010).
   The new problem is, essentially, about designing MAB algorithms under an additional
-  constraint motivated by their application to MAB mechanisms.This note is self-contained,
-  although some familiarity with MAB is assumed; we refer the reader to \citeCesaBL-book
-  for more background.
+  constraint motivated by their application to MAB mechanisms. This note is self-contained,
+  although some familiarity with MAB is assumed; we refer the reader to Cesa-Bianchi and Lugosi (2006) for more background.
 pdf: http://proceedings.mlr.press/v19/slivkins11b/slivkins11b.pdf
 layout: inproceedings
 series: Proceedings of Machine Learning Research
