--- a/_posts/2011-12-21-vanerven11a.md
+++ b/_posts/2011-12-21-vanerven11a.md
@@ -1,15 +1,15 @@
 ---
 title: Mixability is Bayes Risk Curvature Relative to Log Loss
-abstract: "Mixability of a loss governs the best possible performance when\taggregating
-  expert predictions with respect to that loss. The\tdetermination of the mixability
-  constant for binary losses is\tstraightforward but opaque. In the binary case we
-  make this \ttransparent and simpler by\tcharacterising mixability in terms of the
-  second derivative of the\tBayes risk of proper losses.  We then extend this result
-  to\tmulticlass proper losses where there are few existing results.  We\tshow that
-  mixability is governed by the Hessian of the Bayes risk,\trelative to the Hessian
-  of the Bayes risk for log loss. We\tconclude by comparing our result to other work
-  that bounds\tprediction performance in terms of the geometry of the Bayes risk.\tAlthough
-  all calculations are for proper losses, we also show how\tto carry the results across
+abstract: "Mixability of a loss governs the best possible performance when aggregating
+  expert predictions with respect to that loss. The determination of the mixability
+  constant for binary losses is straightforward but opaque. In the binary case we
+  make this  transparent and simpler by characterising mixability in terms of the
+  second derivative of the Bayes risk of proper losses.  We then extend this result
+  to multiclass proper losses where there are few existing results.  We show that
+  mixability is governed by the Hessian of the Bayes risk, relative to the Hessian
+  of the Bayes risk for log loss. We conclude by comparing our result to other work
+  that bounds prediction performance in terms of the geometry of the Bayes risk. Although
+  all calculations are for proper losses, we also show how to carry the results across
   to improper losses."
 pdf: http://proceedings.mlr.press/v19/vanerven11a/vanerven11a.pdf
 layout: inproceedings
