--- a/_posts/2011-12-21-bartok11a.md
+++ b/_posts/2011-12-21-bartok11a.md
@@ -1,15 +1,15 @@
 ---
 title: Minimax Regret of Finite Partial-Monitoring Games in Stochastic Environments
 abstract: In a partial monitoring game, the learner repeatedly chooses an action,
-  theenvironment responds with an outcome, and then the learner suffers a loss andreceives
-  a feedback signal, both of which are fixed functions of the action andthe outcome.
-  The goal of the learner is to minimize his regret, which is thedifference between
-  his total cumulative loss and the total loss of the bestfixed action in hindsight.Assuming
-  that the outcomes are generated in an i.i.d. fashion from an arbitrary andunknown
-  probability distribution, we characterize the minimax regret of anypartial monitoring
-  game with finitely many actions andoutcomes. It turns out that the minimax regret
-  of any such game is either zero,\widetildeΘ(\sqrtT), Θ(T^2/3), or Θ(T). We provide
-  a computationally efficient learningalgorithm that achieves the minimax regret within
+  the environment responds with an outcome, and then the learner suffers a loss and receives
+  a feedback signal, both of which are fixed functions of the action and the outcome.
+  The goal of the learner is to minimize his regret, which is the difference between
+  his total cumulative loss and the total loss of the best fixed action in hindsight. Assuming
+  that the outcomes are generated in an i.i.d. fashion from an arbitrary and unknown
+  probability distribution, we characterize the minimax regret of any partial monitoring
+  game with finitely many actions and outcomes. It turns out that the minimax regret
+  of any such game is either zero, $\widetilde{\Theta}(\sqrt{T}), \Theta(T^{2/3})$, or $\Theta(T)$. We provide
+  a computationally efficient learning algorithm that achieves the minimax regret within
   logarithmic factor for any game.
 pdf: http://proceedings.mlr.press/v19/bartok11a/bartok11a.pdf
 layout: inproceedings
