--- a/_posts/2011-12-21-feldman11b.md
+++ b/_posts/2011-12-21-feldman11b.md
@@ -1,24 +1,24 @@
 ---
 title: Distribution-Independent Evolvability of Linear Threshold Functions
 abstract: Valiant’s model of evolvability models the evolutionary process of acquiring
-  useful functionality as a restricted form of learning from random examples \citepValiant:09.Linear
+  useful functionality as a restricted form of learning from random examples (Valiant, 2009). Linear
   threshold functions and their various subclasses, such as conjunctions and decision
-  lists, play a fundamental role in learning theory and hence their evolvabilityhas
+  lists, play a fundamental role in learning theory and hence their evolvability has
   been the primary focus of research on Valiant’s framework. One of the main open
-  problems regarding the model is whether conjunctions are evolvable distribution-independently\citepFeldmanValiant:08colt.
+  problems regarding the model is whether conjunctions are evolvable distribution-independently (Feldman and Valiant, 2008).
   We show that the answer is negative. Our proof is based on a new combinatorial parameter
-  of a concept class that lower-bounds the complexity of learning fromcorrelations.We
+  of a concept class that lower-bounds the complexity of learning from correlations. We
   contrast the lower bound with a proof that linear threshold functions having a non-negligible
   margin on the data points are evolvable distribution-independently via a simple
-  mutationalgorithm. Our algorithm relies on a non-linear loss function being used
+  mutation algorithm. Our algorithm relies on a non-linear loss function being used
   to select the hypotheses instead of 0-1 loss in Valiant’s original definition. The
-  proof of evolvabilityrequires that the loss function satisfies several mild conditions
+  proof of evolvability requires that the loss function satisfies several mild conditions
   that are, for example, satisfied by the quadratic loss function studied in several
-  other works \citepMichael:07,Feldman:09sqd,Valiantp:11manu. An important property
-  of our evolution algorithm is monotonicity, that is the algorithm guaranteesevolvability
+  other works (Michael, 2007; Feldman, 2009b; Valiant, 2011). An important property
+  of our evolution algorithm is monotonicity, that is the algorithm guarantees evolvability
   without any decreases in performance. Previously, monotone evolvability was only
-  shown for conjunctions with quadratic loss \citepFeldman:09sqd or when the distribution
-  on the domain is severely restricted \citepMichael:07,Feldman:09sqd,KanadeVV:10.
+  shown for conjunctions with quadratic loss (Feldman, 2009b) or when the distribution
+  on the domain is severely restricted (Michael, 2007; Feldman, 2009b; Kanade et al., 2010).
 pdf: http://proceedings.mlr.press/v19/feldman11b/feldman11b.pdf
 layout: inproceedings
 series: Proceedings of Machine Learning Research
