--- a/_posts/2011-12-21-foster11a.md
+++ b/_posts/2011-12-21-foster11a.md
@@ -5,7 +5,7 @@ abstract: We consider the problem of forecasting a sequence of outcomes from an 
   We prove upper bounds on the value of the associated game, thus certifying the existence
   of a calibrated strategy for the forecaster. We show that complexity of the family
   of checking rules can be captured by the notion of a sequential cover introduced
-  in \citepRakSriTew10a. Various natural assumptions on the class of checking rules
+  in (Rakhlin et al., 2010a). Various natural assumptions on the class of checking rules
   are considered, including finiteness of Vapnik-Chervonenkis and Littlestone’s dimensions.
 pdf: http://proceedings.mlr.press/v19/foster11a/foster11a.pdf
 layout: inproceedings
