--- a/_posts/2011-12-21-grunwald11b.md
+++ b/_posts/2011-12-21-grunwald11b.md
@@ -1,12 +1,12 @@
 ---
 title: Bounds on Individual Risk for Log-loss Predictors
 abstract: In sequential prediction with log-loss as well as density estimationwith
-  risk measured by KL divergence, one is often interested in the\em expected instantaneous
-  loss, or, equivalently, the \em  individual risk at a given fixed sample size n.
-  For Bayesianprediction and estimation methods, it is often easy to obtain boundson
-  the \em cumulative risk. Such results are based on bounding theindividual sequence
-  regret, a technique that is very well known in theCOLT community. Motivated by the
-  easiness of proofs for the cumulativerisk, our open problem is to use the results
+  risk measured by KL divergence, one is often interested in the expected instantaneous
+  loss, or, equivalently, the individual risk at a given fixed sample size $n$.
+  For Bayesianprediction and estimation methods, it is often easy to obtain bounds on
+  the cumulative risk. Such results are based on bounding the individual sequence
+  regret, a technique that is very well known in the COLT community. Motivated by the
+  easiness of proofs for the cumulative risk, our open problem is to use the results
   on cumulative risk to prove corresponding individual-risk bounds.
 pdf: http://proceedings.mlr.press/v19/grunwald11b/grunwald11b.pdf
 layout: inproceedings
