--- a/_posts/2011-12-21-hazan11a.md
+++ b/_posts/2011-12-21-hazan11a.md
@@ -2,17 +2,17 @@
 title: 'Beyond the regret minimization barrier: an optimal algorithm for stochastic
   strongly-convex optimization'
 abstract: We give a novel algorithm for stochastic strongly-convex optimization in
-  thegradient oracle model which returns an O(\frac1T)-approximate solutionafter T
+  the gradient oracle model which returns an $O(\frac1T)$-approximate solution after $T$
   gradient updates. This rate of convergence is optimal in the gradientoracle model.
-  This improves upon the previously known best rate ofO(\frac\log(T)T), which was
-  obtained by applying an onlinestrongly-convex optimization algorithm with regret
-  O(\log(T)) to the batchsetting.We complement this result by proving that any algorithm
-  has expected regret ofΩ(\log(T)) in the online stochastic strongly-convex optimizationsetting.
-  This lower bound holds even in the full-information setting whichreveals more information
-  to the algorithm than just gradients. This shows thatany online-to-batch conversion
-  is inherently suboptimal for stochasticstrongly-convex optimization. This is the
-  first formal evidence that onlineconvex optimization is strictly more difficult
-  than batch stochastic convexoptimization.
+  This improves upon the previously known best rate of $O(\frac{\log(T)}{T})$, which was
+  obtained by applying an online strongly-convex optimization algorithm with regret
+  $O(\log(T))$ to the batch setting. We complement this result by proving that any algorithm
+  has expected regret of $\Omega(\log(T))$ in the online stochastic strongly-convex optimization setting.
+  This lower bound holds even in the full-information setting which reveals more information
+  to the algorithm than just gradients. This shows that any online-to-batch conversion
+  is inherently suboptimal for stochastic strongly-convex optimization. This is the
+  first formal evidence that online convex optimization is strictly more difficult
+  than batch stochastic convex optimization.
 pdf: http://proceedings.mlr.press/v19/hazan11a/hazan11a.pdf
 layout: inproceedings
 series: Proceedings of Machine Learning Research
