--- a/_posts/2011-12-21-kallweit11a.md
+++ b/_posts/2011-12-21-kallweit11a.md
@@ -1,12 +1,12 @@
 ---
 title: A Close Look to Margin Complexity and Related Parameters
-abstract: Concept classes can canonically be represented by sign-matrices,i.e., by
-  matrices with entries 1 and -1. The question whethera sign-matrix (concept class)
-  A can be learned by a machine that performs large margin classification is closely
-  related to the“margin complexity” associated with A. We consider severalvariants
-  of margin complexity, reveal how they are relatedto each other, and we reveal how
+abstract: Concept classes can canonically be represented by sign-matrices, i.e., by
+  matrices with entries $1$ and $-1$. The question whether a sign-matrix (concept class)
+  $A$ can be learned by a machine that performs large margin classification is closely
+  related to the “margin complexity” associated with $A$. We consider several variants
+  of margin complexity, reveal how they are related to each other, and we reveal how
   they are related to other notions of learning-theoretic relevance like SQ-dimension,
-  CSQ-dimension,and the Forster bound.
+  CSQ-dimension, and the Forster bound.
 pdf: http://proceedings.mlr.press/v19/kallweit11a/kallweit11a.pdf
 layout: inproceedings
 series: Proceedings of Machine Learning Research
