--- a/_posts/2011-12-21-kotlowski11a.md
+++ b/_posts/2011-12-21-kotlowski11a.md
@@ -8,10 +8,10 @@ abstract: The paper considers sequential prediction of individual sequences  wit
   boundedness of the data sequence. We then show that both  problems can be be addressed
   by adding the currently predicted  outcome to the calculation of the maximum likelihood,
   followed by  normalization of the distribution.  The strategy obtained in this  way
-  is known in the literature as the \emphsequential normalized    maximum likelihood
-  or \emphlast-step minimax strategy. We show  for the first time that for general
-  exponential families, the regret  is bounded by the familiar (k/2) \log n and thus
-  optimal up to  O(1).  We also show the relationship to the Bayes strategy with  Jeffreys’
+  is known in the literature as the sequential normalized    maximum likelihood
+  or last-step minimax strategy. We show  for the first time that for general
+  exponential families, the regret  is bounded by the familiar $(k/2) \log n$ and thus
+  optimal up to  $O(1)$.  We also show the relationship to the Bayes strategy with  Jeffreys’
   prior.
 pdf: http://proceedings.mlr.press/v19/kotlowski11a/kotlowski11a.pdf
 layout: inproceedings
