--- a/_posts/2011-12-21-maillard11a.md
+++ b/_posts/2011-12-21-maillard11a.md
@@ -2,9 +2,9 @@
 title: A Finite-Time Analysis of Multi-armed Bandits Problems with Kullback-Leibler
   Divergences
 abstract: We consider a Kullback-Leibler-based algorithm for the stochastic multi-armed
-  bandit problem in the case of distributions with finite supports(not necessarily
-  known beforehand), whose asymptotic regret matches the lower bound of \citetBurnetas96.
-  Our contribution is to provide a finite-time analysis of this algorithm;we get bounds
+  bandit problem in the case of distributions with finite supports (not necessarily
+  known beforehand), whose asymptotic regret matches the lower bound of Burnetas and Katehakis (1996).
+  Our contribution is to provide a finite-time analysis of this algorithm; we get bounds
   whose main terms are smaller than the ones of previously known algorithms with finite-time
   analyses (like UCB-type algorithms).
 pdf: http://proceedings.mlr.press/v19/maillard11a/maillard11a.pdf
