--- a/_posts/2011-12-21-slivkins11a.md
+++ b/_posts/2011-12-21-slivkins11a.md
@@ -6,23 +6,23 @@ abstract: In a multi-armed bandit (MAB) problem, an online algorithm makes a seq
   sets is by now well-understood, a lot of recent work has focused on MAB problems
   with exponentially or infinitely large  strategy sets, where one needs to assume
   extra structure in order to make the problem tractable. In particular, recent literature
-  considered information on similarity between arms.We consider similarity information
-  in the setting of \emphcontextual bandits, a natural extension of the basic MAB
-  problem where before each round an algorithm is given the \emphcontext – a hint
+  considered information on similarity between arms. We consider similarity information
+  in the setting of contextual bandits, a natural extension of the basic MAB
+  problem where before each round an algorithm is given the context – a hint
   about the payoffs in this round. Contextual bandits are directly motivated by placing
   advertisements on webpages, one of the crucial problems in sponsored search. A particularly
   simple way to represent similarity information in the contextual bandit setting
-  is via a \emphsimilarity distance between the context-arm pairs which bounds from
-  above the difference between the respective expected payoffs.Prior work on contextual
+  is via a similarity distance between the context-arm pairs which bounds from
+  above the difference between the respective expected payoffs. Prior work on contextual
   bandits with similarity uses “uniform” partitions of the similarity space, so that
   each context-arm pair is approximated by the closest pair in the partition. Algorithms
   based on “uniform” partitions disregard the structure of the payoffs and the context
   arrivals, which is potentially wasteful. We present algorithms that are based on
-  \em adaptive partitions, and take advantage of “benign” payoffs and context arrivals
+  adaptive partitions, and take advantage of “benign” payoffs and context arrivals
   without sacrificing the worst-case performance. The central idea is to maintain
   a finer partition in high-payoff regions of the similarity space and in popular
   regions of the context space. Our results apply to several other settings, e.g.
-  MAB with constrained temporal change \citepDynamicMAB-colt08 and sleeping bandits \citepsleeping-colt08.
+  MAB with constrained temporal change (Slivkins and Upfal, 2008) and sleeping bandits (Kleinberg et al., 2008a).
 pdf: http://proceedings.mlr.press/v19/slivkins11a/slivkins11a.pdf
 layout: inproceedings
 series: Proceedings of Machine Learning Research
